Removing some deprecated calls